--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://4061-135-125-151-37.ngrok-free.app",
+  "url": "https://test-machine.gintonic.work/",
   "name": "Donut",
   "description": "Description",
   "iconUrl": "https://ton.vote/logo.png",
