--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build:dev": "webpack --env mode=development",
-    "build:prod": "webpack --env mode=production",
-    "start": "webpack serve --env mode=development"
+    "build:dev": "webpack --env NODE_ENV=development --mode development",
+    "build:prod": "webpack --env NODE_ENV=production --mode production",
+    "start": "webpack serve --env NODE_ENV=development --mode development --open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/copy-webpack-plugin": "^10.1.3",
+    "@types/dotenv-webpack": "^7.0.8",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.2",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.1.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
     "style-loader": "^4.0.0",
