--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/copy-webpack-plugin": "^10.1.3",
     "@types/dotenv-webpack": "^7.0.8",
     "@types/node": "^22.9.0",
@@ -35,6 +36,7 @@
   },
   "dependencies": {
     "@tonconnect/ui-react": "^2.0.9",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
