--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-transition-group": "^4.4.11",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.2",
     "copy-webpack-plugin": "^12.0.2",
@@ -38,6 +39,7 @@
     "@tonconnect/ui-react": "^2.0.9",
     "axios": "^1.7.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-transition-group": "^4.4.5"
   }
 }
