--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1",
     "react-transition-group": "^4.4.5"
   }
 }
