--- a/package.json
+++ b/package.json
@@ -36,8 +36,12 @@
     "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
+    "@ton/core": "^0.59.0",
+    "@ton/crypto": "^3.3.0",
+    "@ton/ton": "^15.1.0",
     "@tonconnect/ui-react": "^2.0.9",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
